2003-09-05  John Levon  <levon@movementarian.org>

	* opd_image.c: cleanup of ctx_switch_set_image()

2003-09-05  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: After a context switch ensure we update correctly
	  the current image.

2003-09-04  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp:
	* pp/opannotate.cpp: catch op_bfd exception and recover gracefully

2003-09-04  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: tweak "signalling daemon " message as suggested
	  by Carlo Wood

2003-09-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: mention --reset in
	"Getting Started"

2003-09-03  John Levon  <levon@movementarian.org>

	* libop/op_events.c:
	* libpp/op_header.cpp:
	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.c: propagate event
	error back up to caller

	* libdb/odb_hash.h: fix comment

2003-09-02  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* daemon/opd_image.c: use abort() not exit()
	on "can't happen" errors

2003-09-02  John Levon  <levon@movementarian.org>

	* dae/opd_proc.c:
	* daemon/opd_image.c: fix error message

2003-08-28  Philippe Elie  <phil.el@wanadoo.fr>

	* events/alpha.ev6.events: fix duplicate um tag

2003-08-28  John Levon  <levon@movementarian.org>

	* events/i386.athlon.events: fix duplicate minimum tag

	* daemon/opd_image.c:
	* libop/op_events.c: check for duplicate tags

2003-08-28  John Levon  <levon@movementarian.org>


2003-08-27  Will Cohen  <wcohen@redhat.com>

	* utils/op_help.c (resolve_events): Typecast printf argument.

2003-08-25  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opannotate.cpp: enable multiple events

	* pp/opreport_options.cpp: remove #if 0 .... #endif

2003-08-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/count_array.cpp: avoid to access invalid memory

2003-08-25  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in:
	* m4/builtinexpect.m4: