@@ -24,3 +24,4 @@ config.h.in
 config.h
 tags
 autom4te.cache
+pch-c++.h.gch
